# neet-predictor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
archive/: test_schema.py
docs/: DATA_INVENTORY_AND_GAPS.md  DATA_REQUEST_SHEET.md
pipelines/: __init__.py  build_closing_ranks.py  build_college_master.py  build_curated.py  manifest.py  parse_kea_eligible_list.py  parse_kea_pdf.py  parse_mcc_pdf.py  postprocess_categories.py
scripts/: add_kea_2023_fees.py  analyze_air_data.py  cli_demo.py  counsellor_demo.py  debug_hybrid_query.py  diagnose_estimator.py  extract_eligible_full.py  gen_2022_calibration.py  generate_calibration_points.py  integrate_kea_2023.py  integrate_kea_2024.py  integrate_kea_cutoffs.py  integrated_cli_demo.py  parse_kea_2020_cutoffs.py  parse_kea_2022_fees.py  parse_kea_2022_seat_matrix.py  parse_kea_2023_allotments.py  parse_kea_2023_seats_fees.py  parse_kea_2025_candidates.py  parse_kea_fees.py  rank_cli_demo.py  run_batch_mcc.py  run_validators.py  summary_kea.py  test_e2e_627_2022.py  test_eligible_parse.py
tests/: test_counsellor_comparator.py  test_counsellor_executor.py  test_counsellor_intent_parser.py  test_counsellor_knowledge.py  test_counsellor_llm_client.py  test_counsellor_models.py  test_counsellor_orchestrator.py  test_counsellor_prompts.py  test_counsellor_slot_resolver.py  test_counsellor_validator.py  test_integrated_pipeline.py  test_integrated_summary.py  test_loader.py  test_normalizer.py  test_predictor.py  test_rank_calibration.py  (+2 more)
(+128 files in other folders)
