[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neet-predictor"
version = "0.1.0"
description = "NEET UG Rank and College Prediction MVP"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pdfplumber>=0.10",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "streamlit>=1.30",
    "httpx>=0.25",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
